<resources>
    <string name="app_name">Text Launcher</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="uninstall">Uninstall</string>
    <string name="info">App Info</string>
    <string name="increase_size">Increase Size</string>
    <string name="decrease_size">Decrease Size</string>
    <string name="hidden_apps">Hidden Apps</string>
    <string name="preferences">Preferences</string>
    <string name="pref_night_mode_label">Night Mode</string>
    <string name="pref_linear_layout_label">Linear Layout</string>
    <string name="close_small">close</string>
    <string name="clear_small">clear</string>
    <string name="pref_night_mode_key" translatable="false">pref_night_mode</string>
    <string name="pref_linear_layout_key" translatable="false">pref_linear_layout</string>
    <string name="pref_theme_key" translatable="false">pref_theme</string>

    <string name="pref_wallpaper_label">Wallpaper </string>
    <string name="pref_wallpaper_key" translatable="false">pref_wallpaper</string>

    <string name="pref_transparency_label">Background Transparency </string>
    <string name="pref_transparency_key" translatable="false">pref_transparency</string>
    <string name="search_hint">Search…</string>

</resources>
